--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Futbol Liga</string>
     <string name="create_new_league">Jańa liga dúziw</string>
     <string name="load_league">Saqlanǵan ligaǵa kiriw</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
